fixing form bugs on iOS 5.0 and iOS 4.3

--- a/www/f5/packages/default.css
+++ b/www/f5/packages/default.css
@@ -223,6 +223,15 @@
 /*             Miscellany              */
 /***************************************/
 
+.f5form {	
+	-webkit-transition: top .25s;
+	position: absolute;
+}
+
+.f5form .f5label {
+	pointer-events: none;
+}
+
 .f5inputerror {
 	color: red;
 	position: absolute;
